Refactor docs to have tested examples
Move code from docs into real specs and use includes
to integrate them into the generated documentation.

--- a/docs/all_in_one.adoc
+++ b/docs/all_in_one.adoc
@@ -1,8 +1,7 @@
 = Spock Framework Reference Documentation
 :toc: left
 :toclevels: 3
-:author: Peter Niederwieser
-:revnumber: 1.0
+include::include.adoc[]
 
 include::introduction.adoc[leveloffset=+1]
 
