--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -1,4 +1,5 @@
 = Extensions
+include::include.adoc[]
 
 Spock comes with a powerful extension mechanism, which allows to hook into a spec's lifecycle to enrich or alter its
 behavior. In this chapter, we will first learn about Spock's built-in extensions, and then dive into writing custom
