Add documentation for the spring module

--- a/docs/include.adoc
+++ b/docs/include.adoc
@@ -1,3 +1,6 @@
 :author: Peter Niederwieser
 :revnumber: 1.1-rc2
 :sourcedir: ../spock-specs/src/test/groovy/org/spockframework/docs
+:sourcedir-spring: ../spock-spring/src/test/groovy/org/spockframework/spring/docs
+:resourcedir-spring: ../spock-spring/src/test/resources/org/spockframework/spring/docs
+:sourcedir-spring-boot: ../spock-spring/boot-test/src/test/groovy/org/spockframework/boot
