--- a/docs/module_spring.adoc
+++ b/docs/module_spring.adoc
@@ -56,3 +56,12 @@ include::{sourcedir-spring-boot}/WebMvcTestIntegrationSpec.groovy[tag=include]
 
 
 For more examples see the specs in the https://github.com/spockframework/spock/tree/master/spock-spring/src/test/groovy/org/spockframework/spring[codebase] and https://github.com/spockframework/spock/tree/master/spock-spring/src/test/groovy/org/spockframework/spring/boot-test[boot examples].
+
+== Scopes
+
+Spock ignores bean that is not a `singleton` (in the `singleton` scope) by default. To enable mocks to work for scoped beans
+you need to add `@ScanScopedBeans` to the spec and make sure that the scope allows access to the bean during the setup phase.
+
+NOTE: The `request` and `session` scope will throw exceptions by default, if there is no active request/session.
+
+You can limit the scanning to certain scopes by using the `value` property of `@ScanScopedBeans`.
