--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -1,6 +1,11 @@
 = Release Notes
 include::include.adoc[]
 
+== 1.2 (tbd)
+
+=== What's New In This release
+* Add flag to UnrollNameProvider to assert unroll expressions (set the system property `spock.assertUnrollExpressions` to `true`) https://github.com/spockframework/spock/issues/767[#767]
+
 == 1.1 (2017-05-01)
 
 === What's New In This release
